Generate Pelican site

--- a/little-agent.html
+++ b/little-agent.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 
-        <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?22a6ac98">
+        <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?bd92da75">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Raleway:400,400i,700" />
         <link href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mathis Dubrul Atom Feed" />
         <link rel="icon" type="image/png" href="https://matouche.github.io/images/favicon.png" />
@@ -11,13 +11,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
         <title>Little Agent - Mathis Dubrul</title>
-        <meta name="description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrainte technique
-oblige, en un peu moins de deux minutes. Quelques images Diffusion Little Agent est visible pour toute la durée …" />
+        <meta name="description" content="Little Agent est un court métrage qui raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout,
+contrainte technique oblige, en un peu moins de deux minutes. Little Agent est visible pour toute la …" />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
         <meta property="og:title" content="Little Agent - Mathis Dubrul" />
-        <meta property="og:description" content="Synopsis Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrainte technique
-oblige, en un peu moins de deux minutes. Quelques images Diffusion Little Agent est visible pour toute la durée …" />
+        <meta property="og:description" content="Little Agent est un court métrage qui raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout,
+contrainte technique oblige, en un peu moins de deux minutes. Little Agent est visible pour toute la …" />
         <meta property="og:type" content="article" />
         <meta property="og:image" content="https://matouche.github.io/images/little_agent_screenshot_1.png" />
         <link rel="canonical" href="https://matouche.github.io/little-agent.html" />
@@ -32,7 +32,7 @@ oblige, en un peu moins de deux minutes. Quelques images Diffusion Little Agent 
             <header>
                 <h1 class="banner"><a href="https://matouche.github.io">
                         Mathis Dubrul
- <small class="subtitle"> Étudiant Animateur / Illustrateur 2D</small>                 </a></h1>
+ <small class="subtitle"> Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
                         <a  class="active" href="https://matouche.github.io/category/animation.html">Animation</a>
                         <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
@@ -58,18 +58,21 @@ oblige, en un peu moins de deux minutes. Quelques images Diffusion Little Agent 
         </header>
 
     <div class="article_content">
-        <h1>Synopsis</h1>
-<p>Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le
+        <p><em>Little Agent</em> est un court métrage qui raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le
 Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrainte technique oblige, en un peu moins de deux minutes.</p>
-<h1>Quelques images</h1>
 <p><img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_1.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_2.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_3.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_4.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_5.png"></p>
-<h1>Diffusion</h1>
-<p>Little Agent est visible pour toute la durée du mois de juin <a href="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA">en suivant ce lien</a> avec le mot de passe <em>juin2018</em>.</p>
+<p>Little Agent est visible pour toute la durée du mois de juin (et même un peu plus) <a href="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA">en suivant ce lien</a> avec le mot de passe <em>juin2018</em>.</p>
 <p>Il sera aussi projeté lors de la séance Coups de cœurs de la HEAJ au cinéma Caméo de Namur le 27 juin (<a href="https://www.facebook.com/events/385801405247474/">plus d'infos ici</a>).</p>
+<h1>Sélection</h1>
+<p>Little Agent est programmé au <strong>Festival International du Film Francophone</strong> de Namur ! Rendez-vous :</p>
+<ul>
+<li>Le samedi 29 septembre à 18h, au Caméo</li>
+<li>Le mercredi 3 octobre à 9h30, au Théâtre de Namur</li>
+</ul>
     </div>
 </article>
             </section>
