--- a/demo-reel-2018.html
+++ b/demo-reel-2018.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 
-        <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?22a6ac98">
+        <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?bd92da75">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Raleway:400,400i,700" />
         <link href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mathis Dubrul Atom Feed" />
         <link rel="icon" type="image/png" href="https://matouche.github.io/images/favicon.png" />
@@ -32,7 +32,7 @@ from november 2018 to january 2019. Feel free to contact me if you're interested
             <header>
                 <h1 class="banner"><a href="https://matouche.github.io">
                         Mathis Dubrul
- <small class="subtitle"> Étudiant Animateur / Illustrateur 2D</small>                 </a></h1>
+ <small class="subtitle"> Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
                         <a  class="active" href="https://matouche.github.io/category/animation.html">Animation</a>
                         <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
@@ -62,7 +62,7 @@ from november 2018 to january 2019. Feel free to contact me if you're interested
     width="640" height="360" frameborder="0"
     webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
-<p>Je recherche un stage de 12 semaines en studio de novembre 2018 à janvier 2019. Contactez-moi si vous êtes intéressés (e-mail à la fin de la vidéo) !</p>
+<p><strong>Je recherche un stage de 12 semaines en studio de novembre 2018 à janvier 2019. Contactez-moi si vous êtes intéressés (e-mail à la fin de la vidéo) !</strong></p>
 <p>[EN]<br>
 Looking for a 12-week internship in a studio from november 2018 to january 2019. Feel free to contact me if you're interested (e-mail at the end of the video) !</p>
 <p>[PT]<br>
