--- a/rotomathisoscope.html
+++ b/rotomathisoscope.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
 
-        <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?22a6ac98">
+        <link rel="stylesheet" href="https://matouche.github.io/theme/css/main.css?bd92da75">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:400,900|Raleway:400,400i,700" />
         <link href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Mathis Dubrul Atom Feed" />
         <link rel="icon" type="image/png" href="https://matouche.github.io/images/favicon.png" />
@@ -30,7 +30,7 @@
             <header>
                 <h1 class="banner"><a href="https://matouche.github.io">
                         Mathis Dubrul
- <small class="subtitle"> Étudiant Animateur / Illustrateur 2D</small>                 </a></h1>
+ <small class="subtitle"> Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
                         <a  class="active" href="https://matouche.github.io/category/animation.html">Animation</a>
                         <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
@@ -56,9 +56,7 @@
         </header>
 
     <div class="article_content">
-        <iframe src="https://player.vimeo.com/video/266060084" width="640" height="360"
- frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen>
-</iframe>
+        <iframe src="https://player.vimeo.com/video/266060084?title=0&byline=0&portrait=0" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 
 <p>After Effects qui tourne, avec un peu de rotoscopie et de Greenkey dedans.</p>
     </div>
