Generate Pelican site

--- a/authors.html
+++ b/authors.html
@@ -39,8 +39,8 @@
 
             <section class="content">
     <h1>Authors on Mathis Dubrul</h1>
-
-    <ul>        <li><a href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a> (10)</li>
+    <ul>
+        <li><a href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a> (10)</li>
     </ul>
             </section>
 
