--- a/categories.html
+++ b/categories.html
@@ -10,11 +10,11 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
-        <title>Mathis Dubrul</title>
+        <title>Mathis Dubrul - Categories</title>
         <meta name="description" content="Je suis étudiant en 3ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
-        <meta property="og:title" content="Mathis Dubrul" />
+        <meta property="og:title" content="Mathis Dubrul - Categories" />
         <meta property="og:description" content="Je suis étudiant en 3ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
         <meta property="og:type" content="website" />
         <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
@@ -38,10 +38,11 @@
             </header>
 
             <section class="content">
-<ul>
-    <li><a href="https://matouche.github.io/category/animation.html">Animation</a></li>
-    <li><a href="https://matouche.github.io/category/illustration.html">Illustration</a></li>
-</ul>
+    <h1>Categories on Mathis Dubrul</h1>
+    <ul>
+        <li><a href="https://matouche.github.io/category/animation.html">Animation</a> (5)</li>
+        <li><a href="https://matouche.github.io/category/illustration.html">Illustration</a> (5)</li>
+    </ul>
             </section>
 
             <div class="extra">
