--- a/little-agent.html
+++ b/little-agent.html
@@ -12,12 +12,12 @@
 
         <title>Little Agent - Mathis Dubrul</title>
         <meta name="description" content="Little Agent est un court métrage qui raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout,
-contrainte technique oblige, en un peu moins de deux minutes. Little Agent est visible pour toute la …" />
+contrainte technique oblige, en un peu moins de deux minutes. Il sera aussi projeté lors de la …" />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
         <meta property="og:title" content="Little Agent - Mathis Dubrul" />
         <meta property="og:description" content="Little Agent est un court métrage qui raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout,
-contrainte technique oblige, en un peu moins de deux minutes. Little Agent est visible pour toute la …" />
+contrainte technique oblige, en un peu moins de deux minutes. Il sera aussi projeté lors de la …" />
         <meta property="og:type" content="article" />
         <meta property="og:image" content="https://matouche.github.io/images/little_agent_screenshot_1.png" />
         <link rel="canonical" href="https://matouche.github.io/little-agent.html" />
@@ -65,7 +65,6 @@ Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrai
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_3.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_4.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_5.png"></p>
-<p>Little Agent est visible pour toute la durée du mois de juin (et même un peu plus) <a href="https://ncloud.zaclys.com/index.php/s/6n4Bg8mKRm6AgGA">en suivant ce lien</a> avec le mot de passe <em>juin2018</em>.</p>
 <p>Il sera aussi projeté lors de la séance Coups de cœurs de la HEAJ au cinéma Caméo de Namur le 27 juin (<a href="https://www.facebook.com/events/385801405247474/">plus d'infos ici</a>).</p>
 <h1>Sélection</h1>
 <p>Little Agent est programmé au <strong>Festival International du Film Francophone</strong> de Namur ! Rendez-vous :</p>
@@ -73,6 +72,8 @@ Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrai
 <li>Le samedi 29 septembre à 18h, au Caméo</li>
 <li>Le mercredi 3 octobre à 9h30, au Théâtre de Namur</li>
 </ul>
+<h2>EDIT : Little Agent à Anima !</h2>
+<p>Little Agent est en sélection nationale au Festival du Film d'Animation Anima de Bruxelles&nbsp;! Plus d'information d'ici peu.</p>
     </div>
 </article>
             </section>
