--- a/tags.html
+++ b/tags.html
@@ -38,7 +38,10 @@
             </header>
 
             <section class="content">
-    <h1>Tags for Mathis Dubrul</h1>            </section>
+    <h1>Tags for Mathis Dubrul</h1>
+    <ul>
+    </ul>
+            </section>
 
             <div class="extra">
                     <div class="about">
