Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -42,6 +42,14 @@
 <h1>Archives for Mathis Dubrul</h1>
 
 <dl>
+    <dt>sam. 16 mars 2019</dt>
+    <dd><a href="https://matouche.github.io/la-guerre-des-mondes.html">La guerre des mondes</a></dd>
+    <dt>dim. 10 mars 2019</dt>
+    <dd><a href="https://matouche.github.io/les-gens-danima.html">Les gens d'Anima</a></dd>
+    <dt>ven. 15 février 2019</dt>
+    <dd><a href="https://matouche.github.io/bloup-bloup.html">Bloup bloup</a></dd>
+    <dt>jeu. 01 novembre 2018</dt>
+    <dd><a href="https://matouche.github.io/letonnant-inktober-dalfred.html">L'étonnant Inktober d'Alfred</a></dd>
     <dt>mar. 26 juin 2018</dt>
     <dd><a href="https://matouche.github.io/demo-reel-2018.html">Demo Reel 2018</a></dd>
     <dt>jeu. 07 juin 2018</dt>
@@ -73,6 +81,7 @@
                             </p>
                             <ul class="social">
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
+                                    <li><a href="https://matouche.github.io/demo-reel-2018.html"><strong>Demo Reel</strong></a></li>
                                     <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
                                     <li><a href="https://matouche.artstation.com">ArtStation</a></li>
                                     <li><a href="https://matouche.github.io/extra/specials/cv">CV</a></li>
