--- a/extra/specials/cv/index.html
+++ b/extra/specials/cv/index.html
@@ -24,7 +24,7 @@
         </header>
         <section class="hello">
             <h1>Hello !</h1>
-            <p>Je suis à la recherche d'un stage en animation du 5 novembre 2018 au 25 janvier 2019.</p>
+            <p>Voici ma bande démo ↴</p>
         </section>
         <section class="reel">
             <div style="padding:56.25% 0 0 0;position:relative;">
@@ -46,7 +46,7 @@
                     <li>Centré sur les techniques numériques (suite Adobe et TVPaint)</li>
                     <li>Aproche des techniques traditionnelles (table lumineuse, zootrope en volume, linogravure,…) et de leur intégration à des travaux numériques à travers des workshops.</li>
                     <li>Exercices d’écriture et de découpage avec des intervenants extérieurs</li>
-                    <li>Réalisation d'un film en fin de 2e année <em>Little Agent</em> (2min14) − <a href="https://www.fiff.be/films/little-agent/6459">Sélectionné au FIFF 2018 (Section Campus)</a></li>
+                    <li>Réalisation d'un film en fin de 2e année <em>Little Agent</em> (2min14) − Sélectionné en <a href="http://www.animafestival.be/index.php?pageID=1002&movieID=18&ln=1">Compétition nationale au Festival Anima 2019</a> et au <a href="https://www.fiff.be/films/little-agent/6459">FIFF 2018 (Section Campus)</a></li>
                 </ul>
                 <h2 class="small">Diplômes</h2>
                 <p class="small">
@@ -61,9 +61,9 @@
         </section>
         <section class="skills">
             <div class="skills_wrapper">
-                <h1>Compétences</h1>
+                <h1>Je sais</h1>
                 <div class="skills_block">
-                    <h2>Artistiques</h2>
+                    <h2>Faire ceci</h2>
                     <p>
                         <strong>Animation 2D</strong> traditionnelle et cut-out<br />
                         Motion Design 2D<br />
@@ -72,13 +72,13 @@
                     </p>
                 </div>
                 <div class="skills_block">
-                    <h2>Logiciels</h2>
+                    <h2>Avec cela</h2>
                     <img src="imgs/soft.png"
                         alt="Photoshop, Illustrator, AfterEffects, Krita,
                         TVPaint, Animate (Flash)" />
                 </div>
                 <div class="skills_block">
-                    <h2>Autres</h2>
+                    <h2>Et parfois aussi</h2>
                     <p>
                         <strong>Web</strong><br />
                         HTML, CSS, Sass<br />
