--- a/authors.html
+++ b/authors.html
@@ -40,7 +40,7 @@
             <section class="content">
     <h1>Authors on Mathis Dubrul</h1>
     <ul>
-        <li><a href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a> (10)</li>
+        <li><a href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a> (14)</li>
     </ul>
             </section>
 
@@ -52,6 +52,7 @@
                             </p>
                             <ul class="social">
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
+                                    <li><a href="https://matouche.github.io/demo-reel-2018.html"><strong>Demo Reel</strong></a></li>
                                     <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
                                     <li><a href="https://matouche.artstation.com">ArtStation</a></li>
                                     <li><a href="https://matouche.github.io/extra/specials/cv">CV</a></li>
