--- a/bloup-bloup.html
+++ b/bloup-bloup.html
@@ -10,16 +10,16 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
-        <title>Mathis Dubrul - Tags</title>
-        <meta name="description" content="Je suis étudiant en 3ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
+        <title>Bloup bloup - Mathis Dubrul</title>
+        <meta name="description" content="" />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
-        <meta property="og:title" content="Mathis Dubrul - Tags" />
-        <meta property="og:description" content="Je suis étudiant en 3ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
-        <meta property="og:type" content="website" />
-        <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
-        <link rel="canonical" href="https://matouche.github.io" />
-        <meta property="og:url" content="https://matouche.github.io" />
+        <meta property="og:title" content="Bloup bloup - Mathis Dubrul" />
+        <meta property="og:description" content="" />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="https://matouche.github.io/images/pieuvre.jpg" />
+        <link rel="canonical" href="https://matouche.github.io/bloup-bloup.html" />
+        <meta property="og:url" content="https://matouche.github.io/bloup-bloup.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -33,14 +33,32 @@
  <small class="subtitle"> Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
                         <a  href="https://matouche.github.io/category/animation.html">Animation</a>
-                        <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
+                        <a  class="active" href="https://matouche.github.io/category/illustration.html">Illustration</a>
                 </nav>
             </header>
 
             <section class="content">
-    <h1>Tags for Mathis Dubrul</h1>
-    <ul>
-    </ul>
+
+<article>
+        <header>
+            <h1 class="article_title">
+            <a href="https://matouche.github.io/bloup-bloup.html" rel="bookmark"
+            title="Permalien vers Bloup bloup">
+                Bloup bloup
+            </a></h1>
+            <p class ="info">
+                Publié le ven. 15 février 2019 par
+                        <a class="url fn"
+                        href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a>
+                dans <a href="https://matouche.github.io/category/illustration.html">
+                    Illustration</a>.
+            </p>
+        </header>
+
+    <div class="article_content">
+        <p><img alt="Salade maritime" src="https://matouche.github.io/images/pieuvre.jpg"></p>
+    </div>
+</article>
             </section>
 
             <div class="extra">
