--- a/categories.html
+++ b/categories.html
@@ -41,7 +41,7 @@
     <h1>Categories on Mathis Dubrul</h1>
     <ul>
         <li><a href="https://matouche.github.io/category/animation.html">Animation</a> (5)</li>
-        <li><a href="https://matouche.github.io/category/illustration.html">Illustration</a> (5)</li>
+        <li><a href="https://matouche.github.io/category/illustration.html">Illustration</a> (9)</li>
     </ul>
             </section>
 
@@ -53,6 +53,7 @@
                             </p>
                             <ul class="social">
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
+                                    <li><a href="https://matouche.github.io/demo-reel-2018.html"><strong>Demo Reel</strong></a></li>
                                     <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
                                     <li><a href="https://matouche.artstation.com">ArtStation</a></li>
                                     <li><a href="https://matouche.github.io/extra/specials/cv">CV</a></li>
