--- a/little-agent.html
+++ b/little-agent.html
@@ -11,13 +11,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
         <title>Little Agent - Mathis Dubrul</title>
-        <meta name="description" content="Little Agent est un court métrage qui raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout,
-contrainte technique oblige, en un peu moins de deux minutes. Il sera aussi projeté lors de la …" />
+        <meta name="description" content="Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrainte technique oblige, en
+un peu moins de deux minutes. Sélectionné en compétition nationale à Anima 2019 (Bruxelles) Sélection dans le programme …" />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
         <meta property="og:title" content="Little Agent - Mathis Dubrul" />
-        <meta property="og:description" content="Little Agent est un court métrage qui raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout,
-contrainte technique oblige, en un peu moins de deux minutes. Il sera aussi projeté lors de la …" />
+        <meta property="og:description" content="Little Agent raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrainte technique oblige, en
+un peu moins de deux minutes. Sélectionné en compétition nationale à Anima 2019 (Bruxelles) Sélection dans le programme …" />
         <meta property="og:type" content="article" />
         <meta property="og:image" content="https://matouche.github.io/images/little_agent_screenshot_1.png" />
         <link rel="canonical" href="https://matouche.github.io/little-agent.html" />
@@ -58,22 +58,36 @@ contrainte technique oblige, en un peu moins de deux minutes. Il sera aussi proj
         </header>
 
     <div class="article_content">
-        <p><em>Little Agent</em> est un court métrage qui raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le
+        <p><em>Little Agent</em> raconte les (més)aventures du plus petit agent secret du Royaume chargé de sauver le
 Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrainte technique oblige, en un peu moins de deux minutes.</p>
+<p><strong>Sélectionné en compétition nationale à Anima 2019 (Bruxelles)</strong><br>
+Sélection dans le programme Campus du Festival du Film Francophone de Namur  </p>
 <p><img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_1.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_2.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_3.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_4.png">
 <img alt="Little Agent" src="https://matouche.github.io/images/little_agent_screenshot_5.png"></p>
-<p>Il sera aussi projeté lors de la séance Coups de cœurs de la HEAJ au cinéma Caméo de Namur le 27 juin (<a href="https://www.facebook.com/events/385801405247474/">plus d'infos ici</a>).</p>
-<h1>Sélection</h1>
-<p>Little Agent est programmé au <strong>Festival International du Film Francophone</strong> de Namur ! Rendez-vous :</p>
+<h1>Où le voir ?</h1>
+<p>Little Agent sera mis en ligne dans les prochains mois, en attendant voici les lieux où il a été/sera projeté.</p>
 <ul>
-<li>Le samedi 29 septembre à 18h, au Caméo</li>
-<li>Le mercredi 3 octobre à 9h30, au Théâtre de Namur</li>
+<li>
+<p>séance Coups de cœurs de la HEAJ au cinéma Caméo de Namur le 27 juin 2018</p>
+</li>
+<li>
+<p><strong>Festival International du Film Francophone 2018</strong></p>
+<ul>
+<li>le samedi 29 septembre à 18h, au Caméo</li>
+<li>le mercredi 3 octobre à 9h30, au Théâtre de Namur</li>
 </ul>
-<h2>EDIT : Little Agent à Anima !</h2>
-<p>Little Agent est en sélection nationale au Festival du Film d'Animation Anima de Bruxelles&nbsp;! Plus d'information d'ici peu.</p>
+</li>
+<li>
+<p>Compétition nationale au <strong>Festival du Film d'Animation Anima de Bruxelles 2019</strong> :</p>
+<ul>
+<li>le mardi 5 mars à 17h45 (Programme <em>C'est du belge 2</em>, Flagey, Studio 4)</li>
+<li>le jeudi 7 mars à 18h (Programme <em>C'est du belge 2</em>, Flagey, Studio 5)</li>
+</ul>
+</li>
+</ul>
     </div>
 </article>
             </section>
@@ -86,6 +100,7 @@ Roi d’une tentative d'attentat aussi diabolique que ridicule. Le tout, contrai
                             </p>
                             <ul class="social">
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
+                                    <li><a href="https://matouche.github.io/demo-reel-2018.html"><strong>Demo Reel</strong></a></li>
                                     <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
                                     <li><a href="https://matouche.artstation.com">ArtStation</a></li>
                                     <li><a href="https://matouche.github.io/extra/specials/cv">CV</a></li>
