--- a/peur-bleue.html
+++ b/peur-bleue.html
@@ -75,6 +75,7 @@ J'ai plus particulièrement réalisé l'animation des visages sous le lit et par
                             </p>
                             <ul class="social">
                                     <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
+                                    <li><a href="https://matouche.github.io/demo-reel-2018.html"><strong>Demo Reel</strong></a></li>
                                     <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
                                     <li><a href="https://matouche.artstation.com">ArtStation</a></li>
                                     <li><a href="https://matouche.github.io/extra/specials/cv">CV</a></li>
