Generate Pelican site

--- a/archives.html
+++ b/archives.html
@@ -48,6 +48,8 @@
     <dd><a href="https://matouche.github.io/les-gens-danima.html">Les gens d'Anima</a></dd>
     <dt>ven. 15 février 2019</dt>
     <dd><a href="https://matouche.github.io/bloup-bloup.html">Bloup bloup</a></dd>
+    <dt>lun. 03 décembre 2018</dt>
+    <dd><a href="https://matouche.github.io/its-alive.html">It's alive</a></dd>
     <dt>jeu. 01 novembre 2018</dt>
     <dd><a href="https://matouche.github.io/letonnant-inktober-dalfred.html">L'étonnant Inktober d'Alfred</a></dd>
     <dt>mar. 26 juin 2018</dt>
