--- a/its-alive.html
+++ b/its-alive.html
@@ -10,16 +10,16 @@
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
-        <title>Mathis Dubrul - Categories</title>
-        <meta name="description" content="Je suis étudiant en 3ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
+        <title>It's alive - Mathis Dubrul</title>
+        <meta name="description" content="" />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
-        <meta property="og:title" content="Mathis Dubrul - Categories" />
-        <meta property="og:description" content="Je suis étudiant en 3ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D." />
-        <meta property="og:type" content="website" />
-        <meta property="og:image" content="https://matouche.github.io/images/favicon.png" />
-        <link rel="canonical" href="https://matouche.github.io" />
-        <meta property="og:url" content="https://matouche.github.io" />
+        <meta property="og:title" content="It's alive - Mathis Dubrul" />
+        <meta property="og:description" content="" />
+        <meta property="og:type" content="article" />
+        <meta property="og:image" content="https://matouche.github.io/images/bras_squelette.gif" />
+        <link rel="canonical" href="https://matouche.github.io/its-alive.html" />
+        <meta property="og:url" content="https://matouche.github.io/its-alive.html" />
 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -32,17 +32,33 @@
                         Mathis Dubrul
  <small class="subtitle"> Animateur / Illustrateur 2D</small>                 </a></h1>
                 <nav class="menu">
-                        <a  href="https://matouche.github.io/category/animation.html">Animation</a>
+                        <a  class="active" href="https://matouche.github.io/category/animation.html">Animation</a>
                         <a  href="https://matouche.github.io/category/illustration.html">Illustration</a>
                 </nav>
             </header>
 
             <section class="content">
-    <h1>Categories on Mathis Dubrul</h1>
-    <ul>
-        <li><a href="https://matouche.github.io/category/animation.html">Animation</a> (6)</li>
-        <li><a href="https://matouche.github.io/category/illustration.html">Illustration</a> (9)</li>
-    </ul>
+
+<article>
+        <header>
+            <h1 class="article_title">
+            <a href="https://matouche.github.io/its-alive.html" rel="bookmark"
+            title="Permalien vers It's alive">
+                It's alive
+            </a></h1>
+            <p class ="info">
+                Publié le lun. 03 décembre 2018 par
+                        <a class="url fn"
+                        href="https://matouche.github.io/author/mathis-dubrul.html">Mathis Dubrul</a>
+                dans <a href="https://matouche.github.io/category/animation.html">
+                    Animation</a>.
+            </p>
+        </header>
+
+    <div class="article_content">
+        <p><img alt="Un bras" src="https://matouche.github.io/images/bras_squelette.gif"></p>
+    </div>
+</article>
             </section>
 
             <div class="extra">
