Generate Pelican site

--- a/its-alive.html
+++ b/its-alive.html
@@ -11,11 +11,11 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
 
         <title>It's alive - Mathis Dubrul</title>
-        <meta name="description" content="" />
+        <meta name="description" content="Animé durant mon stage au Studio Waooh! de Liège" />
         <meta name="author" content="Mathis Dubrul" />
         <meta property="og:site_name" content="Mathis Dubrul">
         <meta property="og:title" content="It's alive - Mathis Dubrul" />
-        <meta property="og:description" content="" />
+        <meta property="og:description" content="Animé durant mon stage au Studio Waooh! de Liège" />
         <meta property="og:type" content="article" />
         <meta property="og:image" content="https://matouche.github.io/images/bras_squelette.gif" />
         <link rel="canonical" href="https://matouche.github.io/its-alive.html" />
@@ -57,6 +57,7 @@
 
     <div class="article_content">
         <p><img alt="Un bras" src="https://matouche.github.io/images/bras_squelette.gif"></p>
+<p>Animé durant mon stage au Studio Waooh! de Liège</p>
     </div>
 </article>
             </section>
