Generate Pelican site

--- a/categories.html
+++ b/categories.html
@@ -52,15 +52,16 @@
                                 Je suis étudiant en 3ème année à la Haute École Albert Jacquard en Animation et Illustration Numérique 2D.
                             </p>
                             <ul class="social">
-                                    <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
                                     <li><a href="https://matouche.github.io/demo-reel-2018.html"><strong>Demo Reel</strong></a></li>
                                     <li><a href="https://vimeo.com/user12625616">Vimeo</a></li>
                                     <li><a href="https://matouche.artstation.com">ArtStation</a></li>
                                     <li><a href="https://matouche.github.io/extra/specials/cv">CV</a></li>
+                                    <li><a href="https://matouche.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate">Atom</a></li>
                             </ul>
                     </div>
             </div>
             <footer class="footer">
+                <a style="display: inline-block; width: 200px;" href="https://matouche.github.io/little-agent.html"><img src="https://matouche.github.io/images/little_agent.gif" alt="Little Agent"></a><br/>
                 Propulsé par Pelican.
             </footer>
         </div>
