Generate Pelican site

--- a/extra/specials/cv/index.html
+++ b/extra/specials/cv/index.html
@@ -22,10 +22,10 @@
                 </p>
             </div>
         </header>
-        <section class="hello">
+        <!--<section class="hello">
             <h1>Hello !</h1>
             <p>Voici ma bande démo ↴</p>
-        </section>
+        </section>-->
         <section class="reel">
             <div style="padding:56.25% 0 0 0;position:relative;">
                 <iframe
@@ -44,7 +44,7 @@
                 <p>Bachelier en techniques graphiques Animation et Illustration Numérique 2D</p>
                 <ul class="small">
                     <li>Centré sur les techniques numériques (suite Adobe et TVPaint)</li>
-                    <li>Aproche des techniques traditionnelles (table lumineuse, zootrope en volume, linogravure,…) et de leur intégration à des travaux numériques à travers des workshops.</li>
+                    <li>Approche des techniques traditionnelles (table lumineuse, zootrope en volume, linogravure,…) et de leur intégration à des travaux numériques à travers des workshops.</li>
                     <li>Exercices d’écriture et de découpage avec des intervenants extérieurs</li>
                     <li>Réalisation d'un film en fin de 2e année <em>Little Agent</em> (2min14) − Sélectionné en <a href="http://www.animafestival.be/index.php?pageID=1002&movieID=18&ln=1">Compétition nationale au Festival Anima 2019</a> et au <a href="https://www.fiff.be/films/little-agent/6459">FIFF 2018 (Section Campus)</a></li>
                 </ul>
@@ -61,9 +61,9 @@
         </section>
         <section class="skills">
             <div class="skills_wrapper">
-                <h1>Je sais</h1>
+                <h1>Je sais faire…</h1>
                 <div class="skills_block">
-                    <h2>Faire ceci</h2>
+                    <h2>Ceci</h2>
                     <p>
                         <strong>Animation 2D</strong> traditionnelle et cut-out<br />
                         Motion Design 2D<br />
@@ -78,7 +78,7 @@
                         TVPaint, Animate (Flash)" />
                 </div>
                 <div class="skills_block">
-                    <h2>Et parfois aussi</h2>
+                    <h2>Et parfois</h2>
                     <p>
                         <strong>Web</strong><br />
                         HTML, CSS, Sass<br />
