Generate Pelican site

--- a/extra/specials/cv/index.html
+++ b/extra/specials/cv/index.html
@@ -17,6 +17,10 @@
                     <span>M a t h i s</span>
                 </h1>
                 <p>
+                    <span><strong>Animation 2D</strong></span>
+                    <span><strong>Illustration Numérique</strong></span>
+                </p>
+                <p>
                     <span>Franco - Belge</span>
                     <span>30 juillet 1998</span>
                 </p>
