Generate Pelican site

--- a/specials/index.html
+++ b/specials/index.html
@@ -1,125 +1,20 @@
 <!DOCTYPE html>
-<html lang="fr" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Curriculum vitæ - Mathis Dubrul</title>
-        <link href="https://fonts.googleapis.com/css?family=Crimson+Text:400,400i,700|Open+Sans:400,700" rel="stylesheet">
-        <link rel="stylesheet" href="master.css" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    </head>
-    <body>
-    <div class="wrapper">
-        <header class="header">
-            <div class="hgroup">
-                <h1>
-                    <small>Curriculum&nbsp;vitæ</small>
-                    <span>D u b r u l</span>
-                    <span>M a t h i s</span>
-                </h1>
-                <p>
-                    <span><strong>Animation 2D</strong></span>
-                    <span><strong>Illustration Numérique</strong></span>
-                </p>
-                <p>
-                    <span>Franco - Belge</span>
-                    <span>30 juillet 1998</span>
-                </p>
-            </div>
-        </header>
-        <!--<section class="hello">
-            <h1>Hello !</h1>
-            <p>Voici ma bande démo ↴</p>
-        </section>-->
-        <section class="reel">
-            <div style="padding:56.25% 0 0 0;position:relative;">
-                <iframe
-                    src="https://player.vimeo.com/video/277073579?color=ffffff&portrait=0"
-                    style="position:absolute;top:0;left:0;width:100%;height:100%;"
-                    frameborder="0"
-                    webkitallowfullscreen mozallowfullscreen allowfullscreen>
-                </iframe>
-            </div>
-            <script src="https://player.vimeo.com/api/player.js"></script>
-        </section>
-        <section class="education">
-            <div class="education_wrapper">
-                <h1>Formation</h1>
-                <h2>2016 – aujourd’hui, Haute École Albert Jacquard, Namur</h2>
-                <p>Bachelier en techniques graphiques Animation et Illustration Numérique 2D</p>
-                <ul class="small">
-                    <li>Centré sur les techniques numériques (suite Adobe et TVPaint)</li>
-                    <li>Approche des techniques traditionnelles (table lumineuse, zootrope en volume, linogravure,…) et de leur intégration à des travaux numériques à travers des workshops.</li>
-                    <li>Exercices d’écriture et de découpage avec des intervenants extérieurs</li>
-                    <li>Réalisation d'un film en fin de 2e année <em>Little Agent</em> (2min14) − Sélectionné en <a href="http://www.animafestival.be/index.php?pageID=1002&movieID=18&ln=1">Compétition nationale au Festival Anima 2019</a> et au <a href="https://www.fiff.be/films/little-agent/6459">FIFF 2018 (Section Campus)</a></li>
-                </ul>
-                <h2 class="small">Diplômes</h2>
-                <p class="small">
-                    <strong>2016, Baccalauréat Général</strong><br />
-                    Option Internationale Portugais<br />
-                    Filière S - Option Arts Plastiques
-                </p>
-                <p  class="small"><strong>2017, BAFA</strong><br />
-                    Approfondissement Accompagnement culturel au Festival du film de Douarnenez (<em>Goùel ar Filmoù</em>)
-                </p>
-            </div>
-        </section>
-        <section class="skills">
-            <div class="skills_wrapper">
-                <h1>Je sais faire…</h1>
-                <div class="skills_block">
-                    <h2>Ceci</h2>
-                    <p>
-                        <strong>Animation 2D</strong> traditionnelle et cut-out<br />
-                        Motion Design 2D<br />
-                        <strong>Illustration</strong> bitmap et vectorielle<br />
-                        Mise en page
-                    </p>
-                </div>
-                <div class="skills_block">
-                    <h2>Avec cela</h2>
-                    <img src="imgs/soft.png"
-                        alt="Photoshop, Illustrator, AfterEffects, Krita,
-                        TVPaint, Animate (Flash)" />
-                </div>
-                <div class="skills_block">
-                    <h2>Et parfois</h2>
-                    <p>
-                        <strong>Web</strong><br />
-                        HTML, CSS, Sass<br />
-                        <strong>Programmation</strong><br />
-                        Un peu de Python et de Rust
-                    </p>
-                </div>
-                <div class="skills_block">
-                    <h2>Langues</h2>
-                    <p>
-                        <strong>Français</strong><br />
-                        maternelle<br />
-                        <strong>Português</strong><br />
-                        ± fluente<br />
-                        <strong>English</strong><br />
-                        spoken & written
-                    </p>
-                </div>
-            </div>
-        </section>
-        <section class="experience">
-            <div class="experience_wrapper">
-                <h1>Autres expériences</h1>
-                <h2>2017, Publication d’un cours en ligne</h2>
-                <p>sur la technologie Web Sass (<a href="http://bit.ly/2Be0A4n">Zeste de Savoir</a>)</p>
-                <h2>Été 2016 à 2018, Animateur en centre de loisirs</h2>
-                <p>MJC Parmentier de Grenoble (2016-2018) et Centre Les Ouistitis à Meylan (2018)</p>
-                <p><strong>2015 :</strong> Assistant sur un mini-stage de <em>stop-motion</em> auprès d'enfants de 6-8 ans, Association Cinémagie (Grenoble)</p>
-                <h2>Bénévolat</h2>
-                <p>juin 2018, <strong>Festival International du Film d’Animation d’Annecy</strong></p>
-                <p>juillet 2015 à 2018, <strong>Festival du Film Court en Plein Air de Grenoble</strong></p>
-            </div>
-        </section>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>James Bond vs les parapluies soviétiques</title>
+    <link rel="stylesheet" href="stylesheets/turboludik.css" />
+</head>
+<body>
+    <div class="popup active" id="home-popup">
+        <h1>James Bond vs les parapluies soviétiques</h1>
+        <div class="circles">
+            <span class="circle"></span><span class="circle"></span><span class="circle"></span>
+        </div>
+        <p><strong>James Bond contre les parapluies soviétiques</strong> est une merveilleuse aventure interactive basée sur <em>turboludik</em>.</p>
+        <p>Pour visionner ce <strong>turboludik</strong>, vous avez besoin de Javascript et d'un navigateur récent.</p>
     </div>
-    <footer class="footer">
-        <img src="imgs/footer.png" alt="Footer" />
-        <a class="button" href="https://matouche.github.io/">Accès au Portfolio</a>
-    </footer>
-    </body>
+    <script src="js/markdown.js"></script>
+    <script src="js/turboludik.js"></script>
+</body>
 </html>
