--- a/index.html
+++ b/index.html
@@ -32,15 +32,37 @@
         }
 
         @media screen and (min-width: 900px) {
-            body {
-                margin: 5rem;
-                text-align: right;
+            ul li {
+                display: inline-block;
+                margin-left: 1rem;
             }
 
-            ul li {
-            display: inline-block;
-            margin-left: 1rem;
-        }
+            .video-container {
+                position: absolute;
+                left: 2rem;
+                top: 0%;
+                width: 56%;
+                height: 100%;
+            }
+
+            .video-container iframe {
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+            }
+
+            .presentation {
+                text-align: right;
+                position: absolute;
+                top: 0;
+                height: 100%;
+                right: 5rem;
+                max-width: 30%;
+                display: flex;
+                align-items: center;
+            }
         }
 
         h1 {
@@ -69,14 +91,25 @@
 
 <body>
     <div class="wrapper">
-        <h1>Mathis Dubrul</h1>
-        <p>Animateur 2D et réalisateur de films d'animation<br />
-            🗺️ Actuellement à Valence (26000, France)</p>
-        <ul>
-            <li><a href="https://vimeo.com/mathisdubrul">Vimeo</a></li>
-            <li><a href="https://www.instagram.com/mathisdubrul/">Instagram</a></li>
-            <li><a href="https://grafson.netlify.app/">Grafson</a></li>
-        </ul>
+        <div class="presentation">
+            <div>
+                <h1>Mathis Dubrul</h1>
+                <p>Animateur 2D et réalisateur de films d'animation<br />
+                    🌍 Valence, Pays de la raviole</p>
+                <ul>
+                    <li><a href="https://vimeo.com/mathisdubrul">Vimeo</a></li>
+                    <li><a href="https://www.instagram.com/mathisdubrul/">Instagram</a></li>
+                    <li><a href="https://grafson.netlify.app/">Grafson</a></li>
+                </ul>
+            </div>
+        </div>
+
+        <div class="video-container"><iframe
+                src="https://player.vimeo.com/video/399093303?h=a7d396478b&title=0&byline=0&color=ffffff&portrait=0"
+                frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe></div>
+        <script src="https://player.vimeo.com/api/player.js"></script>
+
+
     </div>
 </body>
 
