--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <ul>
                     <li><a href="https://vimeo.com/mathisdubrul">Vimeo</a></li>
                     <li><a href="https://www.instagram.com/mathisdubrul/">Instagram</a></li>
-                    <li><a href="https://grafson.netlify.app/">Grafson</a></li>
+                    <li><a href="./grafson_solo.html">Grafson</a></li>
                 </ul>
             </div>
         </div>
