--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
         <div class="presentation">
             <div>
                 <h1>Mathis Dubrul</h1>
-                <p>Animateur 2D et réalisateur de films d'animation<br />
-                    🌍 Valence, Pays de la raviole</p>
+                <p>Réalisateur franco-belge de films d'animation<br />
+                    🌍 Valence, Drôme</p>
                 <ul>
                     <li><a href="https://vimeo.com/mathisdubrul">Vimeo</a></li>
                     <li><a href="https://www.instagram.com/mathisdubrul/">Instagram</a></li>
