--- a/index.html
+++ b/index.html
@@ -97,6 +97,7 @@
                 <p>Réalisateur franco-belge de films d'animation<br />
                     🌍 Valence, Drôme</p>
                 <ul>
+                    <li><a href="/portfolio/">Portfolio</a></li>
                     <li><a href="https://vimeo.com/mathisdubrul">Vimeo</a></li>
                     <li><a href="https://www.instagram.com/mathisdubrul/">Instagram</a></li>
                     <li><a href="./grafson_solo.html">Grafson</a></li>
