--- a/index.html
+++ b/index.html
@@ -1,117 +1,4 @@
-<!DOCTYPE html>
-<html lang="fr">
-
-<head>
-    <meta charset="utf-8" />
-
-    <link rel="icon" type="image/png" href="https://matouche.github.io/favicon.png" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
-    <title>Mathis Dubrul</title>
-    <meta name="description" content="Mathis Dubrul, animateur 2D et réalisateur de films d'animation" />
-    <meta name="author" content="Mathis Dubrul" />
-    <meta property="og:site_name" content="Mathis Dubrul">
-    <meta property="og:title" content="Mathis Dubrul" />
-    <meta property="og:description" content="Animateur 2D - Réalisateur de films d'animation" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://matouche.github.io/favicon.png" />
-    <link rel="canonical" href="https://matouche.github.io" />
-    <meta property="og:url" content="https://matouche.github.io" />
-    <!--[if IE]>
-            <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-        <![endif]-->
-    <link rel="stylesheet" href="./reset.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Pangolin">
-
-    <style>
-        body {
-            margin: 2rem;
-            font-size: 16px;
-            line-height: 1.5em;
-            text-align: center;
-            font-family: "Pangolin", sans-serif;
-        }
-
-        @media screen and (min-width: 900px) {
-            ul li {
-                display: inline-block;
-                margin-left: 1rem;
-            }
-
-            .video-container {
-                position: absolute;
-                left: 2rem;
-                top: 0%;
-                width: 56%;
-                height: 100%;
-            }
-
-            .video-container iframe {
-                position: absolute;
-                left: 0;
-                top: 0;
-                width: 100%;
-                height: 100%;
-            }
-
-            .presentation {
-                text-align: right;
-                position: absolute;
-                top: 0;
-                height: 100%;
-                right: 5rem;
-                max-width: 30%;
-                display: flex;
-                align-items: center;
-            }
-        }
-
-        h1 {
-            font-size: 2rem;
-            margin-bottom: 2rem;
-        }
-
-        ul {
-            margin-top: 4rem;
-        }
-
-        ul li a:hover {
-            background-color: #B96;
-        }
-
-        ul li a {
-            display: inline-block;
-            padding: .5rem 1rem;
-            margin-bottom: 1rem;
-            background-color: #A85;
-            text-decoration: none;
-            color: white;
-        }
-    </style>
-</head>
-
-<body>
-    <div class="wrapper">
-        <div class="presentation">
-            <div>
-                <h1>Mathis Dubrul</h1>
-                <p>Réalisateur franco-belge de films d'animation<br />
-                    🌍 Valence, Drôme</p>
-                <ul>
-                    <li><a href="/portfolio/">Portfolio</a></li>
-                    <li><a href="https://vimeo.com/mathisdubrul">Vimeo</a></li>
-                    <li><a href="https://www.instagram.com/mathisdubrul/">Instagram</a></li>
-                    <li><a href="./grafson_solo.html">Grafson</a></li>
-                </ul>
-            </div>
-        </div>
-
-        <div class="video-container"><iframe
-                src="https://player.vimeo.com/video/399093303?h=a7d396478b&title=0&byline=0&color=ffffff&portrait=0"
-                frameborder="0" allow="fullscreen; picture-in-picture" allowfullscreen></iframe></div>
-        <script src="https://player.vimeo.com/api/player.js"></script>
-
-
-    </div>
-</body>
-
-</html>
+---
+title: Portfolio
+layout: portfolio
+---
