--- a/cv.html
+++ b/cv.html
@@ -11,7 +11,7 @@ permalink: /cv/
         <h2 id="expérience">Expérience</h2>
         <h3 id="scalaé-productions---réalisateur---2023-2024">Scalaé Productions - Réalisateur - 2023-2024</h3>
         <ul>
-            <li>Réalisation d&#39;un épisode de 2 min de la collection Première Page basé sur <em>Le Mystère de la
+            <li>Réalisation d&#39;un épisode de la collection <strong>Première Page</strong> basé sur <em>Le Mystère de la
                     chambre jaune</em> de Gaston Leroux pour France Télévisions</li>
             <li>Animation 2D TVPaint, colo tradi (pastel) et compositing After Effects</li>
         </ul>
