--- a/cv.html
+++ b/cv.html
@@ -11,10 +11,10 @@ permalink: /cv/
             <img src="{% link assets/contact_info.png %}" alt="né le 30/07/1998 à Grenoble" width="250"/>
         </p>
         <h2 id="expérience">Expérience</h2>
-        <h3 id="scalaé-productions---réalisateur---2023-2024">Scalaé Productions – Réalisateur – août 2023 - fév. 2024</h3>
+        <h3 id="scalaé-productions---réalisateur---2023-2024">Scalaé Productions – Réalisateur – de août 2023 à fév. 2024</h3>
         <ul>
-            <li>J'ai réalisé <em>Le Mystère de la
-                chambre jaune</em> (2min15), un épisode de la collection <strong>Première Page</strong> (France TV)</li>
+            <li>J'ai réalisé <a href="{% link _posts/2024-02-28-premiere-page.md %}">Le Mystère de la
+                chambre jaune</a> (2min15), un épisode de la collection <strong>Première Page</strong> (France TV)</li>
             <li>animation 2D TVPaint, colo tradi (pastel) et compositing After Effects</li>
         </ul>
     </div>
